[gd_scene load_steps=7 format=3 uid="uid://d0bw0krvephcd"]

[ext_resource type="Script" path="res://Grid/Scenes/Logic/logic.gd" id="1_2tlqv"]
[ext_resource type="Texture2D" uid="uid://cgaharimrb3ls" path="res://Grid/Sprites/Fond.webp" id="2_gdgvm"]
[ext_resource type="PackedScene" uid="uid://dnuke6tg3cgnv" path="res://Grid/Scenes/Grid/Grid.tscn" id="2_jxdwt"]
[ext_resource type="PackedScene" uid="uid://b2c2mja0nco7k" path="res://Grid/Scenes/SpawnCoin/SpawnCoin.tscn" id="3_y377b"]
[ext_resource type="PackedScene" uid="uid://bp7n8i7fmeact" path="res://Grid/Scenes/YellowCoin/YellowCoin.tscn" id="5_rd43o"]
[ext_resource type="PackedScene" uid="uid://brlpsvudnkbib" path="res://Grid/Scenes/Redcoin/RedCoin.tscn" id="6_xfhbl"]

[node name="Logic" type="Node2D"]
texture_filter = 1
script = ExtResource("1_2tlqv")

[node name="Fond" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("2_gdgvm")

[node name="Grid" parent="." instance=ExtResource("2_jxdwt")]
position = Vector2(133, 15)

[node name="SpawnCoin" parent="." instance=ExtResource("3_y377b")]
position = Vector2(864, 85)

[node name="Cells" type="Node2D" parent="."]
position = Vector2(133, 14)

[node name="cell_5_6" type="Marker2D" parent="Cells"]
position = Vector2(335, 284)

[node name="cell_5_5" type="Marker2D" parent="Cells"]
position = Vector2(285, 284)

[node name="cell_5_4" type="Marker2D" parent="Cells"]
position = Vector2(235, 284)

[node name="cell_5_3" type="Marker2D" parent="Cells"]
position = Vector2(185, 284)

[node name="cell_5_2" type="Marker2D" parent="Cells"]
position = Vector2(135, 284)

[node name="cell_5_1" type="Marker2D" parent="Cells"]
position = Vector2(85, 284)

[node name="cell_5_0" type="Marker2D" parent="Cells"]
position = Vector2(35, 285)

[node name="cell_4_6" type="Marker2D" parent="Cells"]
position = Vector2(335, 234)

[node name="cell_4_5" type="Marker2D" parent="Cells"]
position = Vector2(285, 234)

[node name="cell_4_4" type="Marker2D" parent="Cells"]
position = Vector2(235, 234)

[node name="cell_4_3" type="Marker2D" parent="Cells"]
position = Vector2(185, 234)

[node name="cell_4_2" type="Marker2D" parent="Cells"]
position = Vector2(135, 234)

[node name="cell_4_1" type="Marker2D" parent="Cells"]
position = Vector2(85, 234)

[node name="cell_4_0" type="Marker2D" parent="Cells"]
position = Vector2(35, 235)

[node name="cell_3_6" type="Marker2D" parent="Cells"]
position = Vector2(335, 184)

[node name="cell_3_5" type="Marker2D" parent="Cells"]
position = Vector2(285, 184)

[node name="cell_3_4" type="Marker2D" parent="Cells"]
position = Vector2(235, 184)

[node name="cell_3_3" type="Marker2D" parent="Cells"]
position = Vector2(185, 184)

[node name="cell_3_2" type="Marker2D" parent="Cells"]
position = Vector2(135, 184)

[node name="cell_3_1" type="Marker2D" parent="Cells"]
position = Vector2(85, 184)

[node name="cell_3_0" type="Marker2D" parent="Cells"]
position = Vector2(35, 185)

[node name="cell_2_6" type="Marker2D" parent="Cells"]
position = Vector2(335, 136)

[node name="cell_2_5" type="Marker2D" parent="Cells"]
position = Vector2(285, 135)

[node name="cell_2_4" type="Marker2D" parent="Cells"]
position = Vector2(235, 135)

[node name="cell_2_3" type="Marker2D" parent="Cells"]
position = Vector2(185, 134)

[node name="cell_2_2" type="Marker2D" parent="Cells"]
position = Vector2(135, 135)

[node name="cell_2_1" type="Marker2D" parent="Cells"]
position = Vector2(85, 135)

[node name="cell_2_0" type="Marker2D" parent="Cells"]
position = Vector2(35, 135)

[node name="cell_1_6" type="Marker2D" parent="Cells"]
position = Vector2(335, 85)

[node name="cell_1_5" type="Marker2D" parent="Cells"]
position = Vector2(285, 85)

[node name="cell_1_4" type="Marker2D" parent="Cells"]
position = Vector2(235, 85)

[node name="cell_1_3" type="Marker2D" parent="Cells"]
position = Vector2(185, 85)

[node name="cell_1_2" type="Marker2D" parent="Cells"]
position = Vector2(135, 85)

[node name="cell_1_1" type="Marker2D" parent="Cells"]
position = Vector2(85, 85)

[node name="cell_1_0" type="Marker2D" parent="Cells"]
position = Vector2(35, 86)

[node name="cell_0_6" type="Marker2D" parent="Cells"]
position = Vector2(335, 35)

[node name="cell_0_5" type="Marker2D" parent="Cells"]
position = Vector2(285, 35)

[node name="cell_0_4" type="Marker2D" parent="Cells"]
position = Vector2(235, 35)

[node name="cell_0_3" type="Marker2D" parent="Cells"]
position = Vector2(185, 35)

[node name="cell_0_2" type="Marker2D" parent="Cells"]
position = Vector2(135, 35)

[node name="cell_0_1" type="Marker2D" parent="Cells"]
position = Vector2(85, 35)

[node name="cell_0_0" type="Marker2D" parent="Cells"]
position = Vector2(35, 35)

[node name="Markers" type="Node2D" parent="."]
position = Vector2(133, 14)

[node name="Marker_0" type="Marker2D" parent="Markers"]
position = Vector2(35, 35)

[node name="Marker_1" type="Marker2D" parent="Markers"]
position = Vector2(85, 35)

[node name="Marker_2" type="Marker2D" parent="Markers"]
position = Vector2(135, 35)

[node name="Marker_3" type="Marker2D" parent="Markers"]
position = Vector2(185, 35)

[node name="Marker_4" type="Marker2D" parent="Markers"]
position = Vector2(235, 35)

[node name="Marker_5" type="Marker2D" parent="Markers"]
position = Vector2(285, 35)

[node name="Marker_6" type="Marker2D" parent="Markers"]
position = Vector2(335, 35)

[node name="cols" type="Node2D" parent="."]
position = Vector2(2, 3)

[node name="col_1" type="Button" parent="cols"]
modulate = Color(0.211765, 0.239216, 0.290196, 0)
texture_filter = 1
offset_left = 131.0
offset_top = 12.0
offset_right = 191.0
offset_bottom = 337.0

[node name="col_2" type="Button" parent="cols"]
modulate = Color(1, 1, 1, 0)
offset_left = 192.0
offset_top = 12.0
offset_right = 242.0
offset_bottom = 337.0

[node name="col_3" type="Button" parent="cols"]
modulate = Color(1, 1, 1, 0)
offset_left = 242.0
offset_top = 12.0
offset_right = 292.0
offset_bottom = 337.0

[node name="col_4" type="Button" parent="cols"]
self_modulate = Color(0.223529, 0.168627, 0.168627, 0)
offset_left = 292.0
offset_top = 12.0
offset_right = 342.0
offset_bottom = 337.0

[node name="col_5" type="Button" parent="cols"]
modulate = Color(1, 1, 1, 0)
offset_left = 342.0
offset_top = 12.0
offset_right = 390.0
offset_bottom = 337.0

[node name="col_6" type="Button" parent="cols"]
modulate = Color(1, 1, 1, 0)
offset_left = 390.0
offset_top = 12.0
offset_right = 443.0
offset_bottom = 337.0

[node name="col_7" type="Button" parent="cols"]
modulate = Color(1, 1, 1, 0)
offset_left = 443.0
offset_top = 12.0
offset_right = 495.0
offset_bottom = 337.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = -0.00115896

[node name="PlayerTimer1" type="Timer" parent="UI"]

[node name="PlayerTimer2" type="Timer" parent="UI"]

[node name="Player1Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 511.953
offset_top = 40.5934
offset_right = 578.953
offset_bottom = 63.5934
text = "142"

[node name="Player2Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 12.9583
offset_top = 36.015
offset_right = 61.9583
offset_bottom = 59.015

[node name="YellowCoin" parent="." instance=ExtResource("5_rd43o")]
position = Vector2(1585, 236)

[node name="RedCoin" parent="." instance=ExtResource("6_xfhbl")]
position = Vector2(1537, 242)

[node name="VictoryPopup" type="Popup" parent="."]

[node name="VictoryLabel" type="Label" parent="VictoryPopup"]
offset_right = 40.0
offset_bottom = 23.0
